tests/pass/mostran_newline.kl
// mostran prints with a trailing newline.
fn inisiu() {
    mostran("Ola");
    nter x = 7;
    mostran(x);
}
