tests/fail/fail_void_func_in_expr.kl
fn printHello() {
    mostran("Hello");
}

fn inisiu() {
    nter x = 1 + printHello();
}
